--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@eslint/js": "^9.14.0",
     "@github/browserslist-config": "^1.0.0",
     "aria-query": "^5.3.0",
+    "eslint-config-prettier": ">=8.0.0",
     "eslint-plugin-escompat": "^3.11.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-filenames": "^1.3.2",
