--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jsx-ast-utils": "^3.3.2",
     "prettier": "^3.0.0",
     "svg-element-attributes": "^1.3.1",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.14.0"
   },
   "prettier": "@github/prettier-config",
