--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "eslint-plugin-github",
   "version": "0.0.0-dev",
+  "type": "module",
   "description": "An opinionated collection of ESLint shared configs and rules used by GitHub.",
   "main": "lib/index.js",
   "entries": [
